Fixed header mobile spacing

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ header {
     max-height: 45vw;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
 .navbar {
     background-color: white;
     position: fixed;
@@ -68,6 +74,7 @@ li {
 .bannerimg {
     box-sizing: border-box;
     display: flex;
+    flex: 1 0 60%;
     max-width: 60%;
     padding: 32px 12px 32px 24px;
 }
@@ -76,7 +83,7 @@ li {
     width: 100%;
     max-height: 100%;
     min-width: 0;
-    min-height: fit-content;
+    padding-top: 32px;
 }
 
 .bannerinfo {
@@ -88,7 +95,12 @@ li {
     padding-top: 20%;
     padding-bottom: 20%;
     margin-left: 24px;
+    flex: 1 0 40%;
     max-width: 40%;
+}
+
+.bannerinfomobile {
+    display: none;
 }
 
 .bannerinfo h1 {
@@ -112,11 +124,11 @@ li {
 }
 
 /* Information Section */
-
+/*
 main {
     display: flex;
     flex-direction: column;
-}
+} */
 
 .first {
     display: flex;
@@ -138,6 +150,7 @@ main {
 }
 
 .information img {
+    display: flex;
     width: 100%;
     max-height: fit-content;
     min-width: 0;
@@ -161,6 +174,7 @@ main {
 }
 
 .mini img {
+    display: flex;
     width: 35%;
     max-height: 100%;
     min-width: 0;
@@ -325,15 +339,17 @@ footer {
     }
 
     header {
-        max-height: auto;
+        max-height: 80vh;
     }
 
     .navbar {
         display: flex;
         flex-direction: row;
-        align-items: center;
         justify-items: center;
         max-width: 100vw;
+        height: 64px;
+        position: fixed;
+        z-index: 100;
     }
 
     .logo {
@@ -360,10 +376,69 @@ footer {
         width: 70%;
     }
 
-    .banner {
-        height: auto;
-        max-height: auto;
+    main {
+        display: block;
         flex-direction: column;
+    }
+
+    .banner {
+        display: block;
+        flex-flow: column;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .bannerimg img {
+        display: block;
+        width: 100%;
+        padding-top: 32px;
+    }
+    
+    .bannerimg {
+        display: inline;
+        width: 100%;
+    }
+
+    .bannerinfo {
+        display: none;
+    }
+
+    .bannerinfomobile {
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+    max-width: 100%;
+    }
+
+    .bannerinfomobile h1 {
+        margin-bottom: 0px;
+    }
+
+    .bannerinfomobile h4 {
+        margin: 32px 0px;
+    }
+
+    .bannerinfomobile button {
+        justify-items: center;
+        align-content: center;
+        max-width: 80%;
+    }
+
+    .first {
+        display: flex;
+        flex-flow: column;
+        flex-direction: column;
+        width: 100%;
+        overflow-y: auto;
+    }
+
+    #campus {
+        display: none;
+    }
+
+    .asideinfo {
+        max-width: 100%;
+        width: 100%;
     }
 
 }
